fix issue with overlapping frames

--- a/css/admin_style.css
+++ b/css/admin_style.css
@@ -183,3 +183,7 @@
   top: 0;
   left: 0;
 }
+
+.mugshot-hidden-while-selecting {
+  display: none !important;
+}
